# MCP-Scorecard

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  example.yml
docs/: architecture.md  release-checklist.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  release-notes-v0.5.0.md  release-notes-v1.0.0.md  validated-servers.md
examples/insecure-server/: README.md
sample-reports/: insecure-server.report.json  insecure-server.report.sarif  insecure-server.terminal.md
src/mcp_trust/: __init__.py  __main__.py  cli.py  models.py  output.py  reporting.py  scoring.py  transport.py
src/mcp_trust/commands/: scan.py
src/mcp_trust/reporters/: json.py  sarif.py  summary.py  terminal.py
src/mcp_trust/rules/: __init__.py  base.py  dangerous_exec_tool.py  dangerous_fs_delete_tool.py  dangerous_fs_write_tool.py  dangerous_http_request_tool.py  dangerous_network_tool.py  dangerous_shell_download_exec.py  duplicate_tool_names.py  missing_required_for_critical_fields.py  missing_schema_type.py  missing_tool_description.py  overly_generic_tool_name.py  registry.py  schema_allows_arbitrary_properties.py  tool_description_mentions_destructive_access.py  tool_helpers.py  v0.py  vague_tool_description.py  weak_input_schema.py  write_tool_without_scope_hint.py
src/mcp_trust/transports/: stdio.py
tests/: test_cli_scan.py  test_cli_smoke.py  test_github_action.py  test_launch_assets.py  test_models.py  test_release_metadata.py  test_reporters.py  test_rule_registry.py  test_rules_v0.py  test_sarif.py  test_scoring.py
